ログイン機能完成

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
     <h1>vsStudy</h1>
     <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
     <a href="{{url_for('studyrecords')}}" class="button">みんなの勉強記録をみる</a>
+    <a href="{{url_for('login')}}" class="button">ログイン</a>
   </div>
 </div>
 </body>
