--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,13 +1,19 @@
-<h2>ログインページ</h2>
+<h2>新規登録ページ</h2>
 <div>
-  <a href="{{ url_for('register' )}}">
-      新規登録へ
+  <a href="{{ url_for('index' )}}">
+      メインページへ戻る
   </a>
 </div>
 
 <form method="POST">
     <!-- CSRF対策(トークンが生成される) -->
   {{ form.hidden_tag() }}
+  <div>
+    {{ form.username.label }} {{ form.username() }}
+    {% for error in form.username.errors %}
+    <span style="color: red;">{{ error }}</span>
+    {% endfor %}
+  </div>
   <div>
     {{ form.email.label }} {{ form.email() }}
     {% for error in form.email.errors %}
@@ -22,11 +28,5 @@
   </div>
     {{ form.submit() }}
 </form>
-
-{% if current_user.is_authenticated %}
-<p>現在,アカウント名:{{ current_user.name }}にログインしています.</p>
-<a class="nav-link" href="{{ url_for('logout') }}">ログアウト</a>
-
-{{ current_user.name }}
 
 {% endif %}
