--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,28 +5,12 @@
   </a>
 </div>
 
-<form method="POST">
-    <!-- CSRF対策(トークンが生成される) -->
-  {{ form.hidden_tag() }}
-  <div>
-    {{ form.email.label }} {{ form.email() }}
-    {% for error in form.email.errors %}
-    <span style="color: red;">{{ error }}</span>
-    {% endfor %}
-  </div>
-  <div>
-    {{ form.password.label }} {{ form.password() }}
-    {% for error in form.password.errors %}
-    <span style="color: red;">{{ error }}</span>
-    {% endfor %}
-  </div>
-    {{ form.submit() }}
-</form>
+<p>
+  <form method="POST">
+    email:  <input type="text" name="email" value="" placeholder="emailを入力して下さい"> <br>
+    password: <input type="text" name="password" value="" placeholder="パスワードを入力してください"><br>
+    <input type="submit" value="ログイン">
+  </form>
+</p>
 
-{% if current_user.is_authenticated %}
-<p>現在,アカウント名:{{ current_user.name }}にログインしています.</p>
-<a class="nav-link" href="{{ url_for('logout') }}">ログアウト</a>
 
-{{ current_user.name }}
-
-{% endif %}
