--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,32 +1,17 @@
 <h2>新規登録ページ</h2>
 <div>
   <a href="{{ url_for('index' )}}">
-      メインページへ戻る
+      メインページへ
   </a>
 </div>
 
-<form method="POST">
-    <!-- CSRF対策(トークンが生成される) -->
-  {{ form.hidden_tag() }}
-  <div>
-    {{ form.username.label }} {{ form.username() }}
-    {% for error in form.username.errors %}
-    <span style="color: red;">{{ error }}</span>
-    {% endfor %}
-  </div>
-  <div>
-    {{ form.email.label }} {{ form.email() }}
-    {% for error in form.email.errors %}
-    <span style="color: red;">{{ error }}</span>
-    {% endfor %}
-  </div>
-  <div>
-    {{ form.password.label }} {{ form.password() }}
-    {% for error in form.password.errors %}
-    <span style="color: red;">{{ error }}</span>
-    {% endfor %}
-  </div>
-    {{ form.submit() }}
-</form>
+<p>
+  <form method="POST">
+    name: <input type="text" name="username" value="" placeholder="名前を入力して下さい"> <br>
+    email:  <input type="text" name="email" value="" placeholder="emailを入力して下さい"> <br>
+    password: <input type="text" name="password" value="" placeholder="パスワードを入力してください"><br>
+    <input type="submit" value="登録">
+  </form>
+</p>
 
-{% endif %}
+
