--- a/app/templates/studyrecords.html
+++ b/app/templates/studyrecords.html
@@ -49,7 +49,11 @@
     {% endfor %}
 
     <p>
-      <a href="{{url_for('index')}}">入口のページ</a>
+      <a href="{{url_for('index')}}">メインページへ戻る</a>
     </p>
+    <p>
+      <a href="{{url_for('show_user_data')}}">マイページへ戻る</a>
+    </p>
+    
   </body>
 </html>
