種々dbの操作画面とranking画面追加

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,6 +4,15 @@
       新規登録へ
   </a>
 </div>
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+  <ul class=flashes>
+  {% for category, message in messages %}
+    <li class="{{ category }}">{{ message }}</li>
+  {% endfor %}
+  </ul>
+{% endif %}
+{% endwith %}
 
 <p>
   <form method="POST">
