--- a/app/static/style/table.css
+++ b/app/static/style/table.css
@@ -1,25 +1,48 @@
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+  }
+
+  table tr {
+    border-bottom: solid 1px #d6ecf1;
+    cursor: pointer;
+  }
+
+  table tr:hover {
+    background-color: #19a9e7;
+  }
+
+  table th,
+  table td {
+    text-align: center;
+    padding: 15px 0;
+  }
+
+  .player-info {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
   }
-  
-  img {
-    display: block;
-    margin: 0 auto;
-    height: 200px;
-  }
-  
-    h1 {
-        font-size: 36px;
-        margin-top: 20px;
-    }
 
-  .button {
+  .player-info img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 54% 36%;
+    margin-right: 10px;
+  }
+.button {
     display: inline-block;
     margin-top: 20px;
     padding: 10px 20px;
@@ -93,7 +116,7 @@ body{
 
 
 .area{
-    background: #4e54c8;  
+    background: #4ec4c8;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
@@ -102,8 +125,8 @@ body{
 }
 
 .area-mypage{
-    background: #4e9bc8;  
-    background: -webkit-linear-gradient(to left, #8fd9fb, #4e91c8);  
+    background: #4eb6c8;  
+    background: -webkit-linear-gradient(to left, #8fd7fb, #4ec0c8);  
     width: 100%;
     height:100vh;
     
