--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -6,19 +6,32 @@
         <div>
             <div class="center">
                 <h1>こんにちは！{{user.name}}さん。本日も勉強記録をつけましょう！</h1>
-                <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo"  >
-                <a href="{{url_for('ranking')}}" class="button" >ランキング</a>
-                <a href="{{url_for('studyrecords')}}" class="button" >みんなの勉強記録をみる</a>
-                <a href="{{url_for('record_add')}}" class="button" >勉強記録を追加する</a>
-                <a href="{{url_for('materials')}}" class="button" >教材一覧</a>
-                <a href="{{url_for('subjects')}}" class="button" >教科一覧</a>
-                <a href="{{url_for('logout')}}" class="button" >ログアウト</a>
+                <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
+                <div>
+                    <a href="{{url_for('ranking')}}" class="button">ランキングをみる</a>
+                    <a href="{{url_for('studyrecords')}}" class="button">みんなの勉強記録をみる</a>
+                    <a href="{{url_for('record_add')}}" class="button">勉強記録を追加する</a>
+                </div>
+                <div>
+                    <a href="{{url_for('challenge')}}" class="button">対戦する</a>
+                    <a href="{{url_for('challenges')}}" class="button">対戦記録</a>
+                </div>
+                <div>
+                    <a href="{{url_for('materials')}}" class="button">教材一覧</a>
+                    <a href="{{url_for('subjects')}}" class="button">教科一覧</a>
+                </div>
+                <div>
+                    <a href="{{url_for('logout')}}" class="button">ログアウト</a>
+                    <a href="{{url_for('index')}}" class="button">メインページへ</a>
+                </div>
+
             </div>
+
         </div>
 
     </div>
 
-    <div class="area">
+    <div class="area-mypage">
         <ul class="circles">
             <li></li>
             <li></li>
