--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,23 +1,36 @@
-<h2>ログインページ</h2>
-<div>
-  <a href="{{ url_for('register' )}}">
-    新規登録へ
-  </a>
-</div>
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
-<ul class=flashes>
-  {% for category, message in messages %}
-  <li class="{{ category }}">{{ message }}</li>
-  {% endfor %}
-</ul>
-{% endif %}
-{% endwith %}
+<!DOCTYPE html>
+<html lang="ja">
 
-<p>
-<form method="POST">
-  email: <input type="text" name="email" value="" placeholder="emailを入力して下さい"> <br>
-  password: <input type="text" name="password" value="" placeholder="パスワードを入力してください"><br>
-  <input type="submit" value="ログイン">
-</form>
-</p>
+<head>
+  <meta charset="UTF-8">
+  <title>ログイン</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style/login.css') }}">
+</head>
+
+<body>
+  <div class="login-container">
+    <h2>ログインページ</h2>
+
+    <form method="POST">
+      <div class="form-group">
+      email <input type="text" name="email" value="" placeholder="emailを入力して下さい"> <br>
+      password <input type="text" name="password" value="" placeholder="パスワードを入力してください"><br>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+      <ul class=flashes>
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+      {% endwith %}
+
+      <button type="submit">ログイン</button>
+    </div>
+    </form>
+    <p>アカウントをお持ちでない方は<a href="{{ url_for('register')}}">こちら</a></p>
+    
+  </div>
+</body>
+
+</html>
