--- a/app/templates/record-add.html
+++ b/app/templates/record-add.html
@@ -4,40 +4,44 @@
 <head>
   <meta charset="UTF-8">
   <title>勉強記録追加</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style/login.css') }}">
 </head>
 
 <body>
-  {% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-  <ul class=flashes>
-    {% for category, message in messages %}
-    <li class="{{ category }}">{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-  {% endwith %}
-  <h2>勉強記録ページ</h2>
-  <div>
-    <a href="{{ url_for('show_user_data' )}}">マイページへ</a>
-  </div>
+  <div class="login-container">
+    <h2>勉強記録追加</h2>
 
-  <p>
-  <form method="POST">
-    <br>
-    教材:
-    <select name="educational_material">
-      {% for material in educational_materials %}
-      <option value="{{ material.id }}">{{ material.name }}</option>
-      {% endfor %}
-    </select>
-    <br>
-    開始時刻: <input type="datetime-local" name="start_time" value="">
-    <br>
-    終了時刻: <input type="datetime-local" name="end_time" value="">
-    <br>
-    <input type="submit" value="追加">
-  </form>
-  </p>
+    <form method="POST">
+      <div class="form-group">
+        教材
+        <select name="educational_material">
+          {% for material in educational_materials %}
+          <option value="{{ material.id }}">{{ material.name }}</option>
+          {% endfor %}
+        </select>
+        <br>
+        開始時刻
+        <input type="datetime-local" name="start_time" value="">
+        <br>
+        終了時刻
+        <input type="datetime-local" name="end_time" value="">
+        <br>
+          {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+      <ul class=flashes>
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+      {% endwith %}
+
+      <button type="submit">追加</button>
+    </div>
+    </form>
+    <p><a href="{{ url_for('show_user_data')}}">マイページへ戻る</a></p>
+    
+  </div>
 </body>
 
 </html>
