--- a/app/templates/subject-add.html
+++ b/app/templates/subject-add.html
@@ -4,31 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <title>教科追加</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style/login.css') }}">
 </head>
 
 <body>
-  {% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-  <ul class=flashes>
-    {% for category, message in messages %}
-    <li class="{{ category }}">{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-  {% endwith %}
-  <h2>教科追加ページ</h2>
-  <div>
-    <a href="{{ url_for('show_user_data' )}}">マイページへ</a>
-  </div>
+  <div class="login-container">
+    <h2>教科追加</h2>
 
-  <p>
-  <form method="POST">
-    <br>
-    教科の名前: <input type="text" name="subject_title" value="" placeholder="教科の名前を入力してください">
-    <br>
-    <input type="submit" value="追加">
-  </form>
-  </p>
+    <form method="POST">
+      <div class="form-group">
+        <br>
+        教科の名前: <input type="text" name="subject_title" value="" placeholder="教科の名前を入力してください">
+        <br>
+        
+        {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+      <ul class=flashes>
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+      {% endwith %}
+
+      <button type="submit">追加</button>
+    </div>
+    </form>
+    <p><a href="{{ url_for('show_user_data')}}">マイページへ戻る</a></p>
+    
+  </div>
 </body>
 
 </html>
